--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx8192M
 # Mod Properties
 	mod_version = 1.0.0
 	maven_group = se.aresiel.tutorial
-	archives_base_name = fabric-example-mod
+	archives_base_name = aresiel-tutorial-mod
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
