--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,22 +13,25 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-    - uses: actions/checkout@v2
+    - name: checkout repository
+      uses: actions/checkout@v2
+    - name: validate gradle wrapper
+      uses: gradle/wrapper-validation-action@v1
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
-        java-version: 1.11
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+        java-version: 11
+    - name: make gradle wrapper executable
+      run: chmod +x ./gradlew
       
-    - name: Build with Gradle
-      run: gradle build additionalCopy
+    - name: build
+      run: ./gradlew build
       env:
         BUILD_RELEASE: ${{ github.event.prerelease == false }}
     
     - name: Upload assets to a Release
       uses: AButler/upload-release-assets@v2.0
       with:
-        files: 'build/to_upload/*'
+        files: 'build/libs/*'
         # secrets.GITHUB_TOKEN
         repo-token: ${{ secrets.GITHUB_TOKEN }}
